[bug bash] | Ankur | Fixed title align in question paper preview

--- a/src/CreateQuestionPaper/create_question_paper.css
+++ b/src/CreateQuestionPaper/create_question_paper.css
@@ -367,3 +367,8 @@ code, pre{
 .tagcontainer{
     width: 25% !important;
 }
+
+.questionPaperTitleInPreview{
+    text-align: center;
+    font-family: "Helvetica";
+}
